[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/MainGUI.gd" type="Script" id=1]
[ext_resource path="res://src/Camera.gd" type="Script" id=2]
[ext_resource path="res://src/Canvas.gd" type="Script" id=3]
[ext_resource path="res://src/Viewport.gd" type="Script" id=4]

[node name="MainGUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopMenuContainer" type="Panel" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TopMenuContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 27.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="MenuButton" parent="VBoxContainer/TopMenuContainer/HBoxContainer"]
margin_right = 35.0
margin_bottom = 20.0
text = "File"

[node name="MenuButton2" type="MenuButton" parent="VBoxContainer/TopMenuContainer/HBoxContainer"]
margin_left = 39.0
margin_right = 102.0
margin_bottom = 20.0
text = "Settings"

[node name="MenuButton3" type="MenuButton" parent="VBoxContainer/TopMenuContainer/HBoxContainer"]
margin_left = 106.0
margin_right = 156.0
margin_bottom = 20.0
text = "About"

[node name="CenterContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 1024.0
margin_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolContainer" type="Panel" parent="VBoxContainer/CenterContainer"]
margin_right = 128.0
margin_bottom = 536.0
rect_min_size = Vector2( 128, 0 )
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/CenterContainer/ToolContainer"]
anchor_right = 0.969
anchor_bottom = 0.008
margin_left = 4.0
margin_top = 4.0
margin_right = -0.0319977
margin_bottom = 61.712
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer/ToolContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 113.0
margin_bottom = 83.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/CenterContainer/ToolContainer/PanelContainer/ToolContainer"]
margin_right = 106.0
margin_bottom = 52.0
columns = 2

[node name="TileSizeLabel" type="Label" parent="VBoxContainer/CenterContainer/ToolContainer/PanelContainer/ToolContainer/GridContainer"]
margin_top = 5.0
margin_right = 43.0
margin_bottom = 19.0
text = "Tile"

[node name="TileSizeInput" type="LineEdit" parent="VBoxContainer/CenterContainer/ToolContainer/PanelContainer/ToolContainer/GridContainer"]
margin_left = 47.0
margin_right = 105.0
margin_bottom = 24.0
text = "16"

[node name="BorderSizeLabel" type="Label" parent="VBoxContainer/CenterContainer/ToolContainer/PanelContainer/ToolContainer/GridContainer"]
margin_top = 33.0
margin_right = 43.0
margin_bottom = 47.0
text = "Border"

[node name="BorderSizeInput" type="LineEdit" parent="VBoxContainer/CenterContainer/ToolContainer/PanelContainer/ToolContainer/GridContainer"]
margin_left = 47.0
margin_top = 28.0
margin_right = 105.0
margin_bottom = 52.0
text = "2"

[node name="GenerateButton" type="Button" parent="VBoxContainer/CenterContainer/ToolContainer/PanelContainer/ToolContainer"]
margin_top = 56.0
margin_right = 106.0
margin_bottom = 76.0
text = "Generate"

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 132.0
margin_right = 1024.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer/CenterContainer/HSplitContainer"]
margin_right = 752.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
stretch = true

[node name="Viewport" type="Viewport" parent="VBoxContainer/CenterContainer/HSplitContainer/ViewportContainer"]
size = Vector2( 752, 536 )
handle_input_locally = false
render_target_update_mode = 3
script = ExtResource( 4 )

[node name="Canvas" type="Node2D" parent="VBoxContainer/CenterContainer/HSplitContainer/ViewportContainer/Viewport"]
script = ExtResource( 3 )

[node name="Camera" type="Camera2D" parent="VBoxContainer/CenterContainer/HSplitContainer/ViewportContainer/Viewport"]
current = true
zoom = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="InspectorContainer" type="Panel" parent="VBoxContainer/CenterContainer/HSplitContainer"]
margin_left = 764.0
margin_right = 892.0
margin_bottom = 536.0
rect_min_size = Vector2( 128, 0 )
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/CenterContainer/HSplitContainer/InspectorContainer"]
anchor_right = 0.969
margin_left = 4.0
margin_top = 4.0
margin_right = -0.0320053
margin_bottom = 110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer/HSplitContainer/InspectorContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 113.0
margin_bottom = 99.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenerateButton" type="Button" parent="VBoxContainer/CenterContainer/HSplitContainer/InspectorContainer/PanelContainer/ToolContainer"]
margin_right = 105.0
margin_bottom = 20.0
text = "Button 1"

[node name="GenerateButton2" type="Button" parent="VBoxContainer/CenterContainer/HSplitContainer/InspectorContainer/PanelContainer/ToolContainer"]
margin_top = 24.0
margin_right = 105.0
margin_bottom = 44.0
text = "Button 2"

[node name="GenerateButton3" type="Button" parent="VBoxContainer/CenterContainer/HSplitContainer/InspectorContainer/PanelContainer/ToolContainer"]
margin_top = 48.0
margin_right = 105.0
margin_bottom = 68.0
text = "Button 3"

[node name="GenerateButton4" type="Button" parent="VBoxContainer/CenterContainer/HSplitContainer/InspectorContainer/PanelContainer/ToolContainer"]
margin_top = 72.0
margin_right = 105.0
margin_bottom = 92.0
text = "Button 3"

[node name="BottomContainer" type="Panel" parent="VBoxContainer"]
margin_top = 568.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 32 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BottomContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 27.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/CenterContainer/ToolContainer/PanelContainer/ToolContainer/GenerateButton" to="." method="_on_GenerateButton_pressed"]
